AP-17490: Make internal VirtualTable constructor private
The constructor should only be used internally to avoid invalid
states/schemas.

AP-17490 (VirtualTableExtensionTable and DataCellValueFactory don't play
along)